# rust-todoapp

./: Cargo.toml  README.md  tasks.txt
entity/src/: tasks.rs
migration/src/: lib.rs  m20230419_192131_create_tasks_table.rs  main.rs
src/: main.rs
